# sim

./: CMakeLists.txt  convexHull.cpp  readNeutronSim.C  run.mac  sim.cc  vis.mac
include/: MyActionInitialization.hh  MyDetectorConstruction.hh  MyEventAction.hh  MyPhysicsList.hh  MyPrimaryGenerator.hh  MyRunAction.hh  MySteppingAction.hh  MyTreeHandler.hh
root/: ScintAndPMT.C  backScatter.C  circle.C  expAndSim.C  fittanxalong.C  multiComp.C  poly.C  test.C
source/: MyActionInitialization.cc  MyDetectorConstruction.cc  MyEventAction.cc  MyPhysicsList.cc  MyPrimaryGenerator.cc  MyRunAction.cc  MySteppingAction.cc  MyTreeHandler.cc
